Add spring data and repository level, code style