@@ -1,32 +1,33 @@
 package com.example.demo.security;
-import lombok.Data;
+
+import java.util.List;
+import java.util.Optional;
+
+import com.example.demo.entity.AuthInfoEntity;
+import com.example.demo.repository.AuthInfoRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.java.Log;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
-@Data
 public class LoadUserDetailService implements UserDetailsService {
 
-    private final Map<String, String> inMemoryUsers = new HashMap<>();
+    private final AuthInfoRepository authInfoRepository;
 
     @Override
     public UserDetails loadUserByUsername(final String username) throws UsernameNotFoundException {
-        final String password = inMemoryUsers.get(username);
-        if (password == null) {
-            return null;
+        final Optional<AuthInfoEntity> authInfoEntity = authInfoRepository.findByLogin(username);
+        if (authInfoEntity.isEmpty()) {
+            throw new UsernameNotFoundException("User with email: " + username + " not found");
         } else {
-            return new User(username, password, Collections.emptyList());
+            final SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                    "ROLE_" + authInfoEntity.get().getUser().getUserRole().name());
+            return new User(username, authInfoEntity.get().getPassword(), List.of(authority));
         }
     }
 }
